overlays/dev/go-app-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  selector:
    matchLabels:
      app: go-app
  replicas: 1
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: 288937191843.dkr.ecr.ap-south-1.amazonaws.com/go-app:dev
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
