overlays/dev/node-app-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  selector:
    matchLabels:
      app: node-app
  replicas: 1
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: <YOUR-ECR>/node-app:dev
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
