overlays/dev/python-app-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  selector:
    matchLabels:
      app: python-app
  replicas: 1
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: 288937191843.dkr.ecr.ap-south-1.amazonaws.com/python-app:dev
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
